2007-03-28	Filipe Maia	<filipe@xray.bmc.uu.se>

	* Public svn repository at svn://130.238.41.203/hawk

2007-03-27	Filipe Maia	<filipe@xray.bmc.uu.se>

	* Fixed a critical bug in tiff2h5. The width and height were
	not being set before the autocorrelation was calculated.

2007-03-21	Filipe Maia	<filipe@xray.bmc.uu.se>

	* Begining of changelog
	* Added a new utility called denoise that tries to remove some poisson
	noise from a picture. Please check utils/denois.c for details.
	* Added background_subtract which tries to subtract the background of a
	series of similar pictures. It's too specific for general usage though.
	* Started to build static binaries for easier installation.